updates made to flow comtent

--- a/app/views/details-1-title.html
+++ b/app/views/details-1-title.html
@@ -12,14 +12,15 @@
       <h1 class="heading-large">
         Payment landing page
       </h1>
+      <p class="lede">This is the page your user will see when they go to the payment page link.</p>
    	</div>
       <div class="column-two-thirds remove-left-margin">
 		<form action="payment-title" class="form">
 	        <div class="form-group">
 	          <label class="form-label-bold" for="email">
-	            Payment title
+	            Payment page title
 	            <span class="form-hint">
-	             This describes what the user is paying for and will appear on the payment link landing page. It will also appear in the URL slug you give to users.
+	             This describes what the user is paying for. It will also appear in the URL you give to users.
 	            </span>
 	          </label>
 	          <input type="text" class="form-control" id="payment-title" style="width: 100%;">
@@ -30,7 +31,7 @@
               <label class="form-label-bold" for="your-message">
                 Contextual information
                 <span class="form-hint">
-	              This information explains what the user is paying for. It will appear under the page title on the payment link you give to users.
+	              This information explains in more detail what the user is paying for. It will appear under the page title.
 	            </span>
               </label>
               <textarea class="form-control" name="textarea" id="textarea" style="width: 100%;" rows="5"></textarea>
