--- a/app/views/details-review-1.html
+++ b/app/views/details-review-1.html
@@ -8,17 +8,55 @@
 
 <main id="content" role="main">
   <div class="grid-row">
-    <div class="column-two-thirds">
+    <div class="column-full">
 
       <h1 class="heading-large">
         Review details
       </h1>
 
-      <p>info</p>
+      <table class="bottom-space">
+        <tbody>
+         <tr>
+            <th scope="row"></th>
+            <td class="numeric"></td>
+            <td><a href=""></a></td>
+          </tr>
+          <tr>
+            <th scope="row">Payment landing page title</th>
+            <td>xxx</td>
+            <td><a href="">Change</a></td>
+          </tr>
+          <tr>
+            <th scope="row">Payment landing page extra info</th>
+            <td>xxx</td>
+            <td><a href="">Change</a></td>
+          </tr>
+          <tr>
+            <th scope="row">URL</th>
+            <td>xxx</td>
+            <td><a href="">Change</a></td>
+          </tr>
+          <tr>
+            <th scope="row">Cost</th>
+            <td>xxx</td>
+            <td><a href="">Change</a></td>
+          </tr>
+          <tr>
+            <th scope="row">Additional info</th>
+            <td>xxx</td>
+            <td><a href="">Change</a></td>
+          </tr>
+          <tr>
+            <th scope="row">Payment options</th>
+            <td>xxx</td>
+            <td><a href="">Change</a></td>
+          </tr>
+        </tbody>
+      </table>
 
       <div class="form-group">
           <a href="/approval-submitted">
-      	     <input class="button" type="submit" value="Request approval">
+      	     <input class="button" type="submit" value="Request approval to go live">
     		  </a>  
   	    <p class="cancel-link"><a href="/set-up-payment">Delete this draft</a></p>
   	    <p class="cancel-link"><a href="/set-up-payment">Preview what your users will see</a></p>
