--- a/app/views/details-2-URL-playback.html
+++ b/app/views/details-2-URL-playback.html
@@ -13,7 +13,9 @@
       <h1 class="heading-large">
         This will be the URL
       </h1>
-      <p class="lede">www.gov.uk/pay/pay-for-fishing-licence</p>
+      <div class="panel panel-border-wide">
+        <p class="lede">www.gov.uk/pay/pay-for-fishing-licence</p>
+      </div>
       <p>You can change the URL by editing the payment title on the previous page.</p>
 
 
