--- a/app/views/details-4-additional-info.html
+++ b/app/views/details-4-additional-info.html
@@ -9,12 +9,29 @@
 <main id="content" role="main">
   <div class="grid-row">
     <div class="column-two-thirds">
+      <form>
+      <div class="form-group">
+        <fieldset>
+          <legend class="bottom-space">
+            <h1 class="heading-large">Would you like to collect any additonal information from your users?</h1>
+            <span class="lede">Select all options that are relevant to your service.</span>
+          </legend>
 
-      <h1 class="heading-large">
-        Would you like to collect any additonal information from your users?
-      </h1>
-
-      <p>info</p>
+          <div class="multiple-choice">
+            <input id="waste-type-1" name="waste-types" type="checkbox" value="waste-animal">
+            <label for="waste-type-1">Applicant email address</label>
+          </div>
+          <div class="multiple-choice">
+            <input id="waste-type-1" name="waste-types" type="checkbox" value="waste-animal">
+            <label for="waste-type-1">Applicant name</label>
+          </div>
+          <div class="multiple-choice">
+            <input id="waste-type-3" name="waste-types" type="checkbox" value="waste-farm-agricultural">
+            <label for="waste-type-3">Applicant phone number</label>
+          </div>
+        </fieldset>
+        </div>
+      </form>
 
 
       <div class="form-group">
