--- a/app/views/details-5-payment-options.html
+++ b/app/views/details-5-payment-options.html
@@ -10,11 +10,29 @@
   <div class="grid-row">
     <div class="column-two-thirds">
 
-      <h1 class="heading-large">
-        What payment options would you like to give your users?
-      </h1>
+      <form>
+      <div class="form-group">
+        <fieldset>
+          <legend class="bottom-space">
+            <h1 class="heading-large">What payment options would you like to give your users?</h1>
+            <span class="lede">Select all options that are relevant to your service.</span>
+          </legend>
 
-      <p>info</p>
+          <div class="multiple-choice">
+            <input id="waste-type-1" name="waste-types" type="checkbox" value="waste-animal">
+            <label for="waste-type-1">Debit card</label>
+          </div>
+          <div class="multiple-choice">
+            <input id="waste-type-1" name="waste-types" type="checkbox" value="waste-animal">
+            <label for="waste-type-1">Credit card</label>
+          </div>
+          <div class="multiple-choice">
+            <input id="waste-type-3" name="waste-types" type="checkbox" value="waste-farm-agricultural">
+            <label for="waste-type-3">Direct debit</label>
+          </div>
+        </fieldset>
+        </div>
+      </form>
 
       <div class="form-group">
           <a href="/details-review-1">
