updates made to flow comtent

--- a/app/views/details-3-cost.html
+++ b/app/views/details-3-cost.html
@@ -14,7 +14,7 @@
           <div class="form-group">
             <fieldset>
              <legend>
-                <h1 class="heading-medium">
+                <h1 class="heading-large">
                   What fee type would you like to charge your users?
                 </h1>
               </legend>
