updates made to flow comtent

--- a/app/views/details-review-1.html
+++ b/app/views/details-review-1.html
@@ -23,18 +23,18 @@
           </tr>
           <tr>
             <th scope="row">Payment landing page title</th>
-            <td>xxx</td>
+            <td>Pay for a fishing licence</td>
             <td><a href="">Change</a></td>
           </tr>
           <tr>
             <th scope="row">Payment landing page extra info</th>
-            <td>xxx</td>
+            <td>You need a fishing licence to fish for salmon, trout, freshwater fish, smelt or eel with a rod and line in England.</td>
             <td><a href="">Change</a></td>
           </tr>
           <tr>
             <th scope="row">URL</th>
             <td>xxx</td>
-            <td><a href="">Change</a></td>
+            <td>You'll need to amend the payment landing page title to change the URL</td>
           </tr>
           <tr>
             <th scope="row">Cost</th>
