updates made to flow comtent

--- a/app/views/details-review-1.html
+++ b/app/views/details-review-1.html
@@ -56,11 +56,10 @@
 
       <div class="form-group">
           <a href="/approval-submitted">
-      	     <input class="button" type="submit" value="Request approval to go live">
+      	     <input class="button" type="submit" value="Save draft and continue">
     		  </a>  
   	    <p class="cancel-link"><a href="/set-up-payment">Delete this draft</a></p>
-  	    <p class="cancel-link"><a href="/set-up-payment">Preview what your users will see</a></p>
-  	    <p class="cancel-link"><a href="/set-up-payment">View documentation</a></p>
+  	     <p>Some text about next steps</p>
   	   </div>
 
     </div>
