update to draft page

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -92,3 +92,10 @@ $path: "/public/images/";
 .bottom-space {
   margin-bottom: 30px;
 }
+
+.review-section {
+  border-bottom: 1px solid gray;
+  border-top: 1px solid gray;
+  margin-bottom: 30px;
+  padding-bottom: 30px;
+}
