--- a/app/views/approval-submitted.html
+++ b/app/views/approval-submitted.html
@@ -17,7 +17,7 @@
       <p>We'll get back to you regarding approval in the next working day. Once approved you'll need to activate the service in the admin tool.</p>
 
       <div class="form-group">  
-  	    <p class="cancel-link"><a href="/details-review-2">View my draft</a></p>
+  	    <p class="cancel-link"><a href="#">Back to payment links</a></p>
   	    <p class="cancel-link"><a href="#">GOV.UK Pay dashboard</a></p>
   	   </div>
 
