--- a/app/views/details-2-URL-playback.html
+++ b/app/views/details-2-URL-playback.html
@@ -16,12 +16,12 @@
       <div class="panel panel-border-wide">
         <p class="lede">www.gov.uk/pay/{{ data['payment-title'] | replace(" ", "-") | lower }}</p>
       </div>
-      <p>You can change the URL by editing the payment title on the previous page.</p>
+      <p>The URL will not go live until it has been approved. You can change the URL by editing the title of your payment link page.</p>
 
 
       <div class="form-group">
           <a href="/details-3-cost">
-      	     <input class="button" type="submit" value="Continue">
+      	     <input class="button" type="submit" value="Save and continue">
     		  </a>  
   	    <p class="cancel-link"><a href="/set-up-payment">Cancel</a></p>
   	   </div>
