--- a/app/views/set-up-payment-2.html
+++ b/app/views/set-up-payment-2.html
@@ -11,11 +11,11 @@
   <div class="grid-row">
     <div class="column-two-thirds">
 
-      <h1 class="heading-large">
-        Set up an online payment
+     <h1 class="heading-large">
+        Payment links
       </h1>
 
-      <p>Set up an online payment for your offline service.</p>
+      <p class="lede">Take online payments for non-digital services. Create a payment link that you can use on application forms.</p>
 
     </div>
   </div>
@@ -33,7 +33,7 @@
      
             <p class="cancel-link"><a href="#">Preview what your users will see</a></p>
             <p class="cancel-link"><a href="/details-review-1">View and edit draft</a></p>
-            <p class="cancel-link"><a href="/set-up-payment">View documentation</a></p>
+            <p><a href="#">Read guidance on using payment links</a></p>
         </div>
 
     </div>
