--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -94,8 +94,15 @@ $path: "/public/images/";
 }
 
 .review-section {
-  border-bottom: 1px solid gray;
-  border-top: 1px solid gray;
-  margin-bottom: 30px;
-  padding-bottom: 30px;
+  border: 1px solid gray;
+  padding-top: 0px;
+  padding-bottom: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin-bottom: 45px;
+}
+
+.multiple-quantity-checkbox {
+  margin-top: 15px;
+  display: block;
 }
