--- a/app/views/details-1-title.html
+++ b/app/views/details-1-title.html
@@ -7,42 +7,42 @@ GOV.UK prototype kit
 {% block content %}
 
 <main id="content" role="main">
-    <div class="grid-row">
-        <div class="column-full">
-            <h1 class="heading-large">
-                Payment landing page
-            </h1>
-
-            <p class="lede">This is the page your user will see when they go to the payment page link.</p>
-        </div>
-        <div class="column-two-thirds remove-left-margin">
-            <form action="/details-2-URL-playback" class="form" method="post">
-                <div class="form-group">
-                    <label class="form-label-bold" for="payment-title">
-                        Payment page title
+  <div class="grid-row">
+  	<div class="column-two-thirds">
+      <h1 class="heading-large">
+        Create a payment link page
+      </h1>
+      <p>Complete the details that a user will need to see when they go to your payment page.</p>
+   	</div>
+      <div class="column-two-thirds remove-left-margin">
+		<form action="/details-2-URL-playback" class="form" method="post">
+	        <div class="form-group">
+	          <label class="form-label-bold" for="payment-title">
+	            Title
 	            <span class="form-hint">
-	             This describes what the user is paying for. It will also appear in the URL you give to users.
+	             Briefly describe what the user is paying for. This will also be used to create the URL.
 	            </span>
                     </label>
                     <input name="payment-title" type="text" class="form-control" id="payment-title"
                            style="width: 100%;" value="{{ data['payment-title'] }}">
                 </div>
 
-                <div class="form-group">
-                    <label class="form-label-bold" for="payment-context">
-                        Contextual information
+	    <div class="form-group">
+              <label class="form-label-bold" for="payment-context">
+                More details
                 <span class="form-hint">
-	              This information explains in more detail what the user is paying for. It will appear under the page title.
+	              Use this optional paragraph to give clarifying information. It will appear under the title.
 	            </span>
                     </label>
                     <textarea class="form-control" name="payment-context" id="payment-context" style="width: 100%;"
                               rows="5">{{ data['payment-context'] }}</textarea>
                 </div>
 
-                <div class="form-group">
-                    <a href="/details-2-URL-playback">
-                        <input class="button" type="submit" value="Continue">
-                    </a>
+	<div class="form-group">
+    	<input class="button" type="submit" value="Save and continue">
+	    <p class="cancel-link"><a href="/set-up-payment">Cancel</a></p>
+	</div>
+	</div>
 
                     <p class="cancel-link"><a href="/set-up-payment">Cancel</a></p>
                 </div>
