--- a/app/views/details-5-payment-options.html
+++ b/app/views/details-5-payment-options.html
@@ -1,45 +1,45 @@
 {% extends "layout.html" %}
 
 {% block page_title %}
-GOV.UK prototype kit
+  GOV.UK prototype kit
 {% endblock %}
 
 {% block content %}
 
 <main id="content" role="main">
-    <div class="grid-row">
-        <div class="column-two-thirds">
+  <div class="grid-row">
+    <div class="column-two-thirds">
 
-            <form action="/details-review-1" method="post">
-                <div class="form-group">
-                    <fieldset>
-                        <legend class="bottom-space">
-                            <h1 class="heading-large">What payment options would you like to give your users?</h1>
-                            <span class="lede">Select all options that are relevant to your service.</span>
-                        </legend>
+      <form action="/details-review-1" method="post">
+      <div class="form-group">
+        <fieldset>
+          <legend class="bottom-space">
+            <h1 class="heading-large">What payment types will you accept?</h1>
+            <span>You can further refine what payment types you accept in your GOV.UK Pay settings.</span>
+          </legend>
 
-                        <div class="multiple-choice">
-                            <input id="card-type" name="card-type" type="checkbox" value="credit-debit"
-                                   {% if data['card-type'] == 'credit-debit' %}checked{% endif %}>
-                            <label for="card-type">Credit and Debit card</label>
-                        </div>
-                        <div class="multiple-choice">
-                            <input id="direct-debit" name="direct-debit" type="checkbox" value="direct-debit"
-                                   {% if data['direct-debit'] == 'direct-debit' %}checked{% endif %}>
-                            <label for="direct-debit">Direct debit</label>
-                        </div>
-                    </fieldset>
-                </div>
-
-                <div class="form-group">
-                    <input class="button" type="submit" value="Continue">
-
-                    <p class="cancel-link"><a href="/set-up-payment">Cancel</a></p>
-                </div>
-
-            </form>
+          <div class="multiple-choice">
+            <input id="card-type" name="card-type" type="checkbox" value="credit-debit"
+                   {% if data['card-type'] == 'credit-debit' %}checked{% endif %}>
+            <label for="card-type">Card payments</label>
+          </div>
+          <div class="multiple-choice">
+            <input id="direct-debit" name="direct-debit" type="checkbox" value="direct-debit"
+                   {% if data['direct-debit'] == 'direct-debit' %}checked{% endif %}>
+            <label for="direct-debit">Direct debit</label>
+          </div>
+        </fieldset>
         </div>
+      
+
+      <div class="form-group">
+      	     <input class="button" type="submit" value="Save and continue">
+  	    <p class="cancel-link"><a href="/set-up-payment">Cancel</a></p>
+  	   </div>
+      </form>
+
     </div>
+  </div>
 </main>
 
 {% endblock %}
