--- a/app/views/set-up-payment.html
+++ b/app/views/set-up-payment.html
@@ -11,16 +11,17 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        Set up an online payment
+        Payment links
       </h1>
 
-      <p>Set up an online payment for your offline service.</p>
+      <p class="lede">Take online payments for non-digital services. Create a payment link that you can use on application forms.</p>
 
       <div class="form-group">
-      	<a href="/details-1-title">
-    	<input class="button" type="submit" value="Continue">
-  		</a>
-	</div>
+        <a href="/details-1-title">
+    	   <input class="button" type="submit" value="Create payment link">
+  		  </a>
+	   </div>
+     <p><a href="#">Read guidance on using payment links</a></p>
     </div>
   </div>
 </main>
