--- a/app/views/details-review-1.html
+++ b/app/views/details-review-1.html
@@ -63,6 +63,7 @@
       </table>
 
       <div class="form-group">
+      <p>You will need to submit this payment link page <br> for approval before it can go live.</p>
           <a href="/set-up-payment-2">
       	     <input class="button" type="submit" value="Save draft and continue">
     		  </a>  
@@ -73,7 +74,6 @@
   <div class="grid-row">
     <div class="column-half">
       <p class="cancel-link"><a href="/set-up-payment">Delete this draft</a></p>
-      <p>You will need to submit this payment link page for approval before it can go live.</p>
     </div>
   </div>
 </main>
