--- a/app/views/set-up-payment-2.html
+++ b/app/views/set-up-payment-2.html
@@ -28,7 +28,7 @@
           <h3 class="heading-medium">Pay for a fishing licence</h3>
           
           <div class="panel panel-border-wide">
-            <p class="bold-small">This is in draft mode. <a href="/approval-submitted">Request permission to go live</a>.</p>
+            <p class="bold-small">This is in draft mode. <a href="/approval-submitted">Request approval to go live</a>.</p>
           </div>
      
             <p class="cancel-link"><a href="#">Preview what your users will see</a></p>
