--- a/app/views/details-3-cost.html
+++ b/app/views/details-3-cost.html
@@ -1,50 +1,45 @@
 {% extends "layout.html" %}
 
 {% block page_title %}
-  GOV.UK prototype kit
+GOV.UK prototype kit
 {% endblock %}
 
 {% block content %}
 
 <main id="content" role="main">
-  <div class="grid-row">
-    <div class="column-two-thirds">
+    <div class="grid-row">
+        <div class="column-two-thirds">
 
-        <form>
-          <div class="form-group">
-            <fieldset>
-             <legend>
-                <h1 class="heading-large">
-                  What fee type would you like to charge your users?
-                </h1>
-              </legend>
+            <form action="/details-4-additional-info">
+                <div class="form-group">
+                    <fieldset>
+                        <legend>
+                            <h1 class="heading-large">
+                                What fee type would you like to charge your users?
+                            </h1>
+                        </legend>
 
-              <div class="multiple-choice" data-target="contact-by-email">
-                <input id="example-contact-by-email" type="radio" name="radio-contact-group" value="Yes">
-                <label for="example-contact-by-email">Fixed fee</label>
-              </div>
-              <div class="panel panel-border-narrow js-hidden" id="contact-by-email">
-                <label class="form-label" for="contact-email">How much is the fee?</label>
-                <input class="form-control" name="contact-email" type="text" id="contact-email">
-              </div>
+                        <div class="multiple-choice" data-target="charge-type-fixed-amount">
+                            <input id="charge-type-fixed" type="radio" name="charge-type" value="Fixed" {% if data['charge-type'] == 'Fixed' %}checked{% endif %}>
+                            <label for="charge-type-fixed">Fixed fee</label>
+                        </div>
+                        <div class="panel panel-border-narrow js-hidden" id="charge-type-fixed-amount">
+                            <label class="form-label" for="charge-type-fixed-amount">How much is the fee?</label>
+                            <input class="form-control" name="charge-type-fixed-amount" type="text" value="{{data['charge-type-fixed-amount']}}">
+                        </div>
 
-              <div class="multiple-choice" data-target="contact-by-phone">
-                <input id="example-contact-by-phone" type="radio" name="radio-contact-group" value="No">
-                <label for="example-contact-by-phone">Variable fee</label>
-              </div>
-            </fieldset>
-          </div>
-        </form>
-
-      <div class="form-group">
-          <a href="/details-4-additional-info">
-      	     <input class="button" type="submit" value="Continue">
-    		  </a>  
-  	    <p class="cancel-link"><a href="/set-up-payment">Cancel</a></p>
-  	   </div>
-
+                        <div class="multiple-choice" data-target="charge-type-variable">
+                            <input id="charge-type-variable" type="radio" name="charge-type" value="Variable" {% if data['charge-type'] == 'Variable' %}checked{% endif %}>
+                            <label for="charge-type-variable">Variable fee</label>
+                        </div>
+                    </fieldset>
+                </div>
+                <div class="form-group">
+                    <input class="button" type="submit" value="Continue">
+                </div>
+            </form>
+        </div>
     </div>
-  </div>
 </main>
 
 {% endblock %}
