--- a/app/views/details-4-additional-info.html
+++ b/app/views/details-4-additional-info.html
@@ -1,48 +1,50 @@
 {% extends "layout.html" %}
 
 {% block page_title %}
-  GOV.UK prototype kit
+GOV.UK prototype kit
 {% endblock %}
 
 {% block content %}
 
 <main id="content" role="main">
-  <div class="grid-row">
-    <div class="column-two-thirds">
-      <form>
-      <div class="form-group">
-        <fieldset>
-          <legend class="bottom-space">
-            <h1 class="heading-large">Would you like to collect any additonal information from your users?</h1>
-            <span class="lede">Select all options that are relevant to your service.</span>
-          </legend>
+    <div class="grid-row">
+        <div class="column-two-thirds">
+            <form action="/details-5-payment-options" method="post">
+                <div class="form-group">
+                    <fieldset>
+                        <legend class="bottom-space">
+                            <h1 class="heading-large">Would you like to collect any additional information from your
+                                users?</h1>
+                            <span class="lede">Select all options that are relevant to your service.</span>
+                        </legend>
 
-          <div class="multiple-choice">
-            <input id="waste-type-1" name="waste-types" type="checkbox" value="waste-animal">
-            <label for="waste-type-1">Applicant email address</label>
-          </div>
-          <div class="multiple-choice">
-            <input id="waste-type-1" name="waste-types" type="checkbox" value="waste-animal">
-            <label for="waste-type-1">Applicant name</label>
-          </div>
-          <div class="multiple-choice">
-            <input id="waste-type-3" name="waste-types" type="checkbox" value="waste-farm-agricultural">
-            <label for="waste-type-3">Applicant phone number</label>
-          </div>
-        </fieldset>
+                        <div class="multiple-choice">
+                            <input id="applicant-email" name="additional-info-email" type="checkbox"
+                                   value="email" {% if data['additional-info-email'] == 'email' %}checked{% endif %}>
+                            <label for="applicant-email">Applicant email address</label>
+                        </div>
+                        <div class="multiple-choice">
+                            <input id="applicant-name" name="additional-info-name" type="checkbox" value="name"
+                                   {% if data['additional-info-name'] == 'name' %}checked{% endif %}>
+                            <label for="applicant-name">Applicant name</label>
+                        </div>
+                        <div class="multiple-choice">
+                            <input id="applicant-phone-number" name="additional-info-number" type="checkbox"
+                                   value="number" {% if data['additional-info-number'] == 'number' %}checked{% endif %}>
+                            <label for="applicant-phone-number">Applicant phone number</label>
+                        </div>
+                    </fieldset>
+                </div>
+
+                <div class="form-group">
+                    <input class="button" type="submit" value="Continue">
+
+                    <p class="cancel-link"><a href="/set-up-payment">Cancel</a></p>
+                </div>
+
+            </form>
         </div>
-      </form>
-
-
-      <div class="form-group">
-          <a href="/details-5-payment-options">
-      	     <input class="button" type="submit" value="Continue">
-    		  </a>  
-  	    <p class="cancel-link"><a href="/set-up-payment">Cancel</a></p>
-  	   </div>
-
     </div>
-  </div>
 </main>
 
 {% endblock %}
