--- a/app/views/details-5-payment-options.html
+++ b/app/views/details-5-payment-options.html
@@ -1,48 +1,45 @@
 {% extends "layout.html" %}
 
 {% block page_title %}
-  GOV.UK prototype kit
+GOV.UK prototype kit
 {% endblock %}
 
 {% block content %}
 
 <main id="content" role="main">
-  <div class="grid-row">
-    <div class="column-two-thirds">
+    <div class="grid-row">
+        <div class="column-two-thirds">
 
-      <form>
-      <div class="form-group">
-        <fieldset>
-          <legend class="bottom-space">
-            <h1 class="heading-large">What payment options would you like to give your users?</h1>
-            <span class="lede">Select all options that are relevant to your service.</span>
-          </legend>
+            <form action="/details-review-1" method="post">
+                <div class="form-group">
+                    <fieldset>
+                        <legend class="bottom-space">
+                            <h1 class="heading-large">What payment options would you like to give your users?</h1>
+                            <span class="lede">Select all options that are relevant to your service.</span>
+                        </legend>
 
-          <div class="multiple-choice">
-            <input id="waste-type-1" name="waste-types" type="checkbox" value="waste-animal">
-            <label for="waste-type-1">Debit card</label>
-          </div>
-          <div class="multiple-choice">
-            <input id="waste-type-1" name="waste-types" type="checkbox" value="waste-animal">
-            <label for="waste-type-1">Credit card</label>
-          </div>
-          <div class="multiple-choice">
-            <input id="waste-type-3" name="waste-types" type="checkbox" value="waste-farm-agricultural">
-            <label for="waste-type-3">Direct debit</label>
-          </div>
-        </fieldset>
+                        <div class="multiple-choice">
+                            <input id="card-type" name="card-type" type="checkbox" value="credit-debit"
+                                   {% if data['card-type'] == 'credit-debit' %}checked{% endif %}>
+                            <label for="card-type">Credit and Debit card</label>
+                        </div>
+                        <div class="multiple-choice">
+                            <input id="direct-debit" name="direct-debit" type="checkbox" value="direct-debit"
+                                   {% if data['direct-debit'] == 'direct-debit' %}checked{% endif %}>
+                            <label for="direct-debit">Direct debit</label>
+                        </div>
+                    </fieldset>
+                </div>
+
+                <div class="form-group">
+                    <input class="button" type="submit" value="Continue">
+
+                    <p class="cancel-link"><a href="/set-up-payment">Cancel</a></p>
+                </div>
+
+            </form>
         </div>
-      </form>
-
-      <div class="form-group">
-          <a href="/details-review-1">
-      	     <input class="button" type="submit" value="Continue">
-    		  </a>  
-  	    <p class="cancel-link"><a href="/set-up-payment">Cancel</a></p>
-  	   </div>
-
     </div>
-  </div>
 </main>
 
 {% endblock %}
