--- a/app/views/details-4-additional-info.html
+++ b/app/views/details-4-additional-info.html
@@ -18,28 +18,31 @@
           </legend>
 
           <div class="multiple-choice">
-            <input id="waste-type-1" name="waste-types" type="checkbox" value="email" 
+            <input id="waste-type-1" name="additional-info-email" type="checkbox" value="email"
                    {% if data['additional-info-email'] == 'email' %}checked{% endif %}>
             <label for="waste-type-1">Applicant email address</label>
           </div>
           <div class="multiple-choice">
-            <input id="waste-type-1" name="waste-types" type="checkbox" value="name"
+            <input id="waste-type-1" name="additional-info-name" type="checkbox" value="name"
                    {% if data['additional-info-name'] == 'name' %}checked{% endif %}>
             <label for="waste-type-1">Applicant name</label>
           </div>
           <div class="multiple-choice">
-            <input id="waste-type-3" name="waste-types" type="checkbox" value="number" 
+            <input id="waste-type-3" name="additional-info-number" type="checkbox" value="number"
                    {% if data['additional-info-number'] == 'number' %}checked{% endif %}>
             <label for="waste-type-3">Applicant phone number</label>
           </div>
 
             <div class="multiple-choice" data-target="contact-by-email">
-                <input id="example-contact-by-email" type="checkbox" name="radio-contact-group" value="Yes">
+                <input id="example-contact-by-email" type="checkbox" name="additional-info-another" value="another"
+                       {% if data['additional-info-another'] == 'another' %}checked{% endif %}>
                 <label for="example-contact-by-email">Request another field</label>
               </div>
               <div class="panel panel-border-narrow js-hidden" id="contact-by-email">
-                <label class="form-label" for="contact-email">What other information would you like to collect?</label>
-                <textarea class="form-control" name="textarea" id="textarea" style="width: 100%;" rows="5"></textarea>
+                <label class="form-label">What other information would you like to collect?</label>
+                <textarea class="form-control" name="additional-info-textarea" id="textarea" style="width: 100%;" rows="5">
+                  {{ data['additional-info-textarea'] }}
+                </textarea>
                 
               </div>
 
