--- a/app/views/details-3-cost.html
+++ b/app/views/details-3-cost.html
@@ -29,7 +29,7 @@
                 
                 <div class="multiple-choice multiple-quantity-checkbox">
                   <input id="checkbox-multiple-quantities" name="charge-type-multiple-quantities" type="checkbox" value="true" {% if data['charge-type-multiple-quantities'] == 'true' %}checked{% endif %}>
-                  <label for="checkbox-multiple-quantities">Allow multiple quantities</label>
+                  <label for="checkbox-multiple-quantities">Add a quantity counter (let the user pay for multiple items)</label>
                 </div>
               </div>
 
