--- a/app/views/details-4-additional-info.html
+++ b/app/views/details-4-additional-info.html
@@ -40,9 +40,7 @@
               </div>
               <div class="panel panel-border-narrow js-hidden" id="contact-by-email">
                 <label class="form-label">What other information would you like to collect?</label>
-                <textarea class="form-control" name="additional-info-textarea" id="textarea" style="width: 100%;" rows="5">
-                  {{ data['additional-info-textarea'] }}
-                </textarea>
+                <textarea class="form-control" name="additional-info-textarea" id="textarea" style="width: 100%;" rows="5">{{ data['additional-info-textarea'] }}</textarea>
                 
               </div>
 
