--- a/app/views/set-up-payment-2.html
+++ b/app/views/set-up-payment-2.html
@@ -17,6 +17,13 @@
 
       <p class="lede">Take online payments for non-digital services. Create a payment link that you can use on application forms.</p>
 
+        <div class="form-group">
+            <a href="/details-1-title">
+                <input class="button" type="submit" value="Create payment link">
+            </a>
+        </div>
+        <p><a href="#">Read guidance on using payment links</a></p>
+
     </div>
   </div>
 
@@ -25,7 +32,7 @@
 
       <h2 class="heading-medium">You have 1 draft</h2>
         <div class="review-section">
-          <h3 class="heading-medium">Pay for a fishing licence</h3>
+          <h3 class="heading-medium">Pay for {{ data['payment-title'] }}</h3>
           
           <div class="panel panel-border-wide">
             <p class="bold-small">This is in draft mode. <a href="/approval-submitted">Request approval to go live</a>.</p>
@@ -33,21 +40,10 @@
      
             <p class="cancel-link"><a href="#">Preview what your users will see</a></p>
             <p class="cancel-link"><a href="/details-review-1">View and edit draft</a></p>
-            <p><a href="#">Read guidance on using payment links</a></p>
         </div>
 
     </div>
   </div>
-
-<div class="grid-row">
-    <div class="column-two-thirds">
-      <div class="form-group">
-            <a href="/details-1-title">
-              <input class="button" type="submit" value="Set up a new payment link">
-            </a>
-      </div>
-    </div>
-</div>
 </main>
 
 {% endblock %}
