--- a/app/views/set-up-payment.html
+++ b/app/views/set-up-payment.html
@@ -14,7 +14,7 @@
         Payment links
       </h1>
 
-      <p class="lede">Take online payments for non-digital services. Create a payment link that you can use on application forms.</p>
+      <p class="lede">Take online payments for non-digital services. Create a payment link that you can use on application forms, or websites where forms are downloaded.</p>
 
       <div class="form-group">
         <a href="/details-1-title">
